force-app/main/default/objects/Company_List_Member__c/Company_List_Member__c.object-meta.xml
<CustomObject>
    <label>Company List Member</label>
    <nameField>
        <displayFormat>PM-{00000000}</displayFormat>
        <label>Company Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Company List Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>