force-app/main/default/objects/Company_List_Member__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Company List</relationshipLabel>
    <relationshipName>Prospect_Members</relationshipName>
    <type>Lookup</type>
</CustomField>