force-app/main/default/objects/Company_List_Member__c/fields/Company_List__c.field-meta.xml
<CustomField>
    <fullName>Company_List__c</fullName>
    <label>Company List</label>
    <referenceTo>Company_List__c</referenceTo>
    <relationshipLabel>Company List Members</relationshipLabel>
    <relationshipName>Prospect_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>