force-app/main/default/objects/Company_List_Member__c/fields/EBITDA_MM__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_MM__c</fullName>
    <formula>Company__r.EBITDA_MM__c</formula>
    <label>EBITDA (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>