force-app/main/default/objects/Company_List_Member__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>Company__r.Location__c</formula>
    <label>Location</label>
    <type>Text</type>
</CustomField>