force-app/main/default/objects/Company_List_Member__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <formula>Company__r.RecordType.Name</formula>
    <label>Record Type</label>
    <type>Text</type>
</CustomField>