force-app/main/default/objects/Company_List_Member__c/fields/Revenue_MM__c.field-meta.xml
<CustomField>
    <fullName>Revenue_MM__c</fullName>
    <formula>Company__r.Revenue_MM__c</formula>
    <label>Revenue (MM)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>