force-app/main/default/objects/Company_List_Member__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <formula>Company__r.TickerSymbol</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ticker Symbol</label>
    <type>Text</type>
</CustomField>