force-app/main/default/objects/Company_List_Member__c/fields/Total_Debt_MM__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_MM__c</fullName>
    <formula>Company__r.Total_Debt_MM__c</formula>
    <label>Total Debt (MM)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Currency</type>
</CustomField>