force-app/main/default/objects/Company_List_Member__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>TEXT(Company__r.Type)</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>